# CodeRepairRL

./: .gitignore  =2.6.0  CLAUDE.md  DATASETS.md  PAPERS.md  PLAN.md  README.md  benchmark.py  pyproject.toml  test_job  test_job.sh  train_job  train_job.sh  verify_stack_dataset.py
benchmarks/: PLAN.md
docs/: AGENT_RL_INTEGRATION.md  DATASETS.md  DIARY.md  PAPER.md  PAPERS.md  PLAN.md  PROJECT.md  RESORUCES.md  RESOURCES.md  VOCABULARY.md
extras/: aider_custom_vllm_integration_test.py  paralellized_aider_test.py  simplified_aider_test.py
scripts/: build_container.sh  container.def  deepspeed_zero3.yaml  diff_example.py  large_grpo_lora_train_job.sh  large_sft_lora_train_job.sh  large_train_job.sh  medium_grpo_lora_train_job.sh  medium_train.job.sh  sft_train_job.sh  small_grpo_lora_train_job.sh  small_grpo_train_job.sh  small_lora_train_job.sh  small_sft_lora_train_job.sh  small_sft_train_job.sh  small_train_job.sh  test_job.sh  train_container.def  train_job.sh  verifiers_container.def  vllm_container.def
scripts/deepspeed/: zero2.yaml  zero2_offload.yaml  zero3.yaml  zero3_grpo.yaml
slurm/: test_job.sh  train_job.sh
src/: benchmark.py  curate_sft_data.py  primevul.py  recover_sft_data.py  structured_model_evaluator.py  train_grpo.py  train_grpo_unsloth.py  train_sft.py
src/agents/: README.md  __init__.py  aider_agent.py  codex_agent.py  codex_container.def  minimal_agent.py  nano_agent.py  openhands_agent.py  simple_agent.py  swe.py  swe_agent.py  swe_agent_haiku.yaml  swe_agent_local.yaml
src/conf/: __init__.py  base_grpo_config.yaml  config.yaml  curation_config.yaml  grpo_config.yaml  grpo_config_large.yaml  sft_config.yaml
src/conf/agent/: nano.yaml
src/conf/grpo/: base.yaml  default.yaml  large_model.yaml  long.yaml  medium.yaml  medium_model.yaml  multi_turn.yaml  short.yaml  single_turn.yaml  small_model.yaml
src/conf/model/: default.yaml  large_gemma.yaml  large_qwen.yaml  medium_gemma3.yaml  medium_qwen.yaml  small_gemma.yaml  small_qwen.yaml
src/conf/run/: base.yaml  default.yaml  detection.yaml  repair.yaml  repo_repair.yaml
src/conf/sft/: default.yaml
src/data/: __init__.py  code_classification.py  code_mono_repair.py  code_repair.py  code_repo_repair.py  codeset.py  primevul.py  r2e_gym.py  repairbench.py  repairllama.py  stack.py  swe_bench.py  swe_gym.py
src/evaluation/: __init__.py  lighteval.py  structured_model_evaluator.py  vulnerability_detection.py
src/rewards/: __init__.py  categorical.py  codeset.py  diff.py  reasoning.py
src/trainer/: __init__.py  execution_trainer.py  search_trainer.py
src/trainers/: kl_sft.py
src/utils/: diff.py  extract.py  git.py  gpu_utils.py  logging.py  resolvers.py  rewards.py
tests/: test_detection_rewards.py  test_diff_rewards.py  test_diff_utils.py  test_new_search_replace_diff.py  test_reasoning_rewards.py  test_repair_rewards.py  test_rewards.py  test_search_replace_diff.py  test_stack.py  test_unified_diff.py  test_unified_diff_rewards.py
